--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 </div>
                 <p id="email-feedback"
                     class="mt-4 text-xs text-[#616f89] dark:text-gray-500 h-4 transition-colors duration-300">Available
-                    on iOS and Android. Free 30-day trial.</p>
+                    on iOS and Android.</p>
 
                 <script>
                     const emailInput = document.getElementById('email-input');
