Remove blue border aesthetic from hero image

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <!-- Hero Image -->
                 <div class="w-full @[864px]:w-1/2 flex justify-center reveal delay-300">
                     <img src="images/acthero.png" alt="Wisemonie App Interface"
-                        class="w-full max-w-[320px] h-auto drop-shadow-2xl animate-float hover:scale-105 transition-transform duration-500">
+                        class="w-full max-w-[320px] h-auto animate-float hover:scale-105 transition-transform duration-500 border-none outline-none ring-0">
                 </div>
                 <!-- Hero Content -->
                 <div
